--- a/frontend/shared/sidebar.html
+++ b/frontend/shared/sidebar.html
@@ -48,6 +48,12 @@
             <span class="link">Stock</span>
           </a>
         </li>
+        <li class="list">
+          <a href="../orders/index.html" class="nav-link">
+            <i class="bx bx-cart icon"></i>
+            <span class="link">Orders</span>
+          </a>
+        </li>
       </div>
     </div>
   </div>
