--- a/frontend/cafes/index.html
+++ b/frontend/cafes/index.html
@@ -32,7 +32,7 @@
 
                         <div class="form-group">
                             <label for="code-acces">Code</label>
-                            <input type="text" id="code-acces" placeholder="XXXX" required>
+                            <input type="text" id="code-acces" placeholder="XXXX" maxlength="5" required>
                         </div>
                     </div>
 
